--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div>
                     <h1 class="text-xl font-bold text-farm-green font-serif tracking-wide group-hover:text-green-700 transition">Swastik Dairy</h1>
-                    <p class="text-xs text-gray-500 -mt-1 tracking-wider">PURE VILLAGE FRESHNESS</p>
+                    <p class="text-xs text-gray-500 -mt-1 tracking-wider">SWASTIK FRESHNESS STRAIGHT FROM VILLAGE</p>
                 </div>
             </a>
 
@@ -387,7 +387,7 @@
                 image: "buffalo ghee.jpg",
                 variants: [
                     { size: "1 Kg", price: 1699 },
-                    { size: "500 gm", price: 799 },
+                    { size: "500 gm", price: 850 },
                     { size: "250 gm", price: 425 }
                 ],
                 tag: "Premium"
@@ -643,3 +643,4 @@
     </script>
 </body>
 </html>
+
