--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 id: 5,
                 name: "Village Lassi",
                 description: "Refreshing traditional drink, lightly sweetened and chilled.",
-                image: "seet.jpg", // Reusing dahi image as fallback, styled differently ideally
+                image: "lassi.jpeg",
                 variants: [
                     { size: "1 Liter", price: 45 },
                     { size: "500 ml", price: 25 },
@@ -643,6 +643,7 @@
     </script>
 </body>
 </html>
+
 
 
 
