--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 id: 1,
                 name: "Fresh Farm Milk",
                 description: "Pure, unprocessed raw milk directly from healthy cows.",
-                image: "milk bucket.jpg",
+                image: "milk bottle.jpeg",
                 variants: [
                     { size: "1 Liter", price: 99 },
                     { size: "500 ml", price: 50 }
@@ -643,6 +643,7 @@
     </script>
 </body>
 </html>
+
 
 
 
